--- a/frontend/index.html
+++ b/frontend/index.html
@@ -92,7 +92,7 @@ let talking = false, greeted = false;
 let mouthCooldown = false;   // 🆕 NEU
   // Zusatzflag: 1 Frame Verzögerung nach Speech-Ende
 let justFinishedSpeaking = false;
-
+let recRunning = false;
 
 // jawIndex NICHT hier setzen!
 // --> wird später automatisch gesetzt, sobald das Modell geladen wurde
