--- a/frontend/index.html
+++ b/frontend/index.html
@@ -453,6 +453,10 @@ try {
 } catch(e) {
   console.warn("❗Recognition start error:", e);
 }
+
+// ⬇️ DIESE Klammer schließt die gesamte micBtn.onclick-Funktion
+} 
+
 /* -----------------------------
    1) MÄNNLICHE STIMME FEST SETZEN  (GLOBAL!)
 ----------------------------- */
